tests/errors/traceback_line_through_finally.experr
line 6, in f
:6:9: error: uncaught exception: BOOM
